[project]
name = "human-in-the-loop-memory"
version = "0.1.0"
description = ""
authors = [
    {name = "Anthony Kugel",email = "anthonykugel@gmail.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.12"
dependencies = [
    "langgraph (>=0.3.25,<0.4.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "langgraph-checkpoint-sqlite (>=2.0.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
