[project]
name = "langgraph-course"
version = "0.1.0"
description = ""
authors = [
    {name = "Anthony Kugel",email = "anthonykugel@gmail.co"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "langchain (>=0.3.15,<0.4.0)",
    "langgraph (>=0.2.67,<0.3.0)",
    "langchainhub (>=0.1.21,<0.2.0)",
    "langchain-community (>=0.3.15,<0.4.0)",
    "tavily-python (>=0.5.0,<0.6.0)",
    "langchain-chroma (>=0.2.1,<0.3.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "black (>=24.10.0,<25.0.0)",
    "isort (>=5.13.2,<6.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "langchain-openai (>=0.3.2,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
